--- a/index.html
+++ b/index.html
@@ -350,5 +350,25 @@
     <script src="products.js"></script>
     <script src="cart.js"></script>
     <script src="script.js"></script>
+    <script>
+        document.getElementById('checkout-btn').addEventListener('click', function() {
+    if (cart.length === 0) {
+        alert("Корзина пуста!");
+        return;
+    }
+
+    // Очистка корзины
+    localStorage.removeItem('cart');
+    cart.length = 0;
+
+    // Обновление интерфейса
+    updateCart();  // Важный шаг для обновления отображения корзины
+
+    // Дополнительные действия, например, закрытие окна
+    document.getElementById('cart-modal').style.display = 'none';
+
+    alert("Заказ оформлен!");
+});
+    </script>
 </body>
 </html>
