--- a/index.html
+++ b/index.html
@@ -317,21 +317,22 @@
         </main>
     </div>
 
-    <!-- Модальные окна -->
-    <div id="cart-modal" class="modal hidden">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <h2>Ваша корзина</h2>
-            <div id="cart-items"></div>
-            <div class="cart-total">
-                Итого: <span id="cart-total-price">0</span> ₽
-            </div>
-            <div class="cart-actions">
-                <button id="checkout-btn">Оформить заказ</button>
-                <button id="continue-shopping-btn">Продолжить покупки</button>
-            </div>
+   <!-- Модальное окно для корзины -->
+<div id="cart-modal" class="modal hidden">
+    <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <h2>Ваша корзина</h2>
+        <div id="cart-items"></div>
+        <div class="cart-total">
+            Итого: <span id="cart-total-price">0</span> ₽
+        </div>
+        <div class="cart-actions">
+            <button id="checkout-btn">Оформить заказ</button>
+            <button id="continue-shopping-btn">Продолжить покупки</button>
         </div>
     </div>
+</div>
+
     
     <div id="register-modal" class="modal hidden">
         <div class="modal-content">
